--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flurry
 description: A Flutter plugin to use Flurry Analytics. This plugin logs sessions, crash detections, simple event logging, UserId.
-version: 0.0.4
+version: 0.0.5
 author: MT Innovation <innovationmauritiustelecom@gmail.com>
-homepage: https://bitbucket.org/
+homepage: https://github.com/innovationmauritiustelecom/flurry_plugin_flutter
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
