--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: flurry
+name: flurry_event
 description: A Flutter plugin to use Flurry Analytics. This plugin logs sessions, crash detections, simple event logging, UserId.
-version: 0.0.7
+version: 0.1.2
 author: MT Innovation <innovationmauritiustelecom@gmail.com>
-homepage: https://github.com/innovationmauritiustelecom/flurry_plugin_flutter
+homepage: https://github.com/domliang/flurry_plugin_flutter
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -23,7 +23,6 @@ flutter:
   plugin:
     androidPackage: mt.innovation.flurry
     pluginClass: FlurryPlugin
-
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
@@ -34,7 +33,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
